Modified server_for_templates and index.html

--- a/web_project/templates/index.html
+++ b/web_project/templates/index.html
@@ -1,1 +1,31 @@
-Hello world!
+<html>
+	<head>
+		<title>My site</title>
+		<meta charset="utf-8" />
+		<style>
+			h1 {
+				color: green;
+				font-size: 48px;
+			}
+			p{
+				font-size: 14px;
+				font-family: Arial;
+				color:  blue;
+			}
+			.odd {
+				color:  blue;
+			}
+			.even {
+				background-color: #1D3FC8;
+			}
+		</style>
+	<head>
+	<body>
+		<h1>Hello World!</h1>
+		<img src="/static/img/kitten.jpg" />
+		<p class="odd">Hello mom!</p>
+		<p class="even">Hello dad!</p>
+		<p class="odd">Hello sister!</p>
+		<p class="even">I'm programmer!</p>
+	<body>
+</html>
