--- a/web_project/templates/index.html
+++ b/web_project/templates/index.html
@@ -2,26 +2,10 @@
 	<head>
 		<title>My site</title>
 		<meta charset="utf-8" />
-		<style>
-			h1 {
-				color: green;
-				font-size: 48px;
-			}
-			p{
-				font-size: 14px;
-				font-family: Arial;
-				color:  blue;
-			}
-			.odd {
-				color:  blue;
-			}
-			.even {
-				background-color: #1D3FC8;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="/static/css/main.css" />
 	<head>
 	<body>
-		<h1>Hello World!</h1>
+		<h1 id="title">Hello World!</h1>
 		<img src="/static/img/kitten.jpg" />
 		<p class="odd">Hello mom!</p>
 		<p class="even">Hello dad!</p>
