--- a/web_project/templates/index.html
+++ b/web_project/templates/index.html
@@ -2,14 +2,57 @@
 	<head>
 		<title>My site</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-	<head>
+		<link href="static/css/bootstrap.min.css" rel="stylesheet">
+		<script src="static/js/bootstrap.bundle.min.js" ></script>
+	</head>
 	<body>
-		<h1 id="title">Hello World!</h1>
-		<img src="/static/img/kitten.jpg" />
-		<p class="odd">Hello mom!</p>
-		<p class="even">Hello dad!</p>
-		<p class="odd">Hello sister!</p>
-		<p class="even">I'm programmer!</p>
+		<script src="static/js/bootstrap.bundle.min.js" ></script>
+		<div class="container">
+			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			  <div class="container-fluid">
+			    <a class="navbar-brand" href="#">My site</a>
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			        <li class="nav-item">
+			          <a class="nav-link active" aria-current="page" href="#">Home</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="/all">Clickable</a>
+			        </li>
+			        <li class="nav-item dropdown">
+			          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			            Dropdown
+			          </a>
+			          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+			            <li><a class="dropdown-item" href="#">Action</a></li>
+			            <li><a class="dropdown-item" href="#">Another action</a></li>
+			            <li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item" href="#">Something else here</a></li>
+			          </ul>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+			        </li>
+			      </ul>
+			      <form class="d-flex" method="POST" action="/login/">
+			        <input class="form-control me-2" type="text" placeholder="Login" name="Admin">
+			        <input class="form-control me-2" type="password" placeholder="Password" name="00000000">
+			        <button class="btn btn-outline-success" type="submit">Submit</button>
+			      </form>
+			    </div>
+			  </div>
+			</nav>
+		</div>	
+		<div class="container">
+			<h1 id="title">Hello World!</h1>
+			<img src="/static/img/kitten.jpg" width="640" height="480" alt="kitten.jpg"/>
+			<p class="odd">Hello mom!</p>
+			<p class="even">Hello dad!</p>
+			<p class="odd">Hello sister!</p>
+			<p class="even">I'm programmer!</p>
+		</div>
 	<body>
 </html>
